<resources>
    <string name="app_name">Voorste Kruisband</string>

    <!--Menu text-->
    <string name="nav_home">Home</string>
    <string name="nav_illness">De Aandoening</string>
    <string name="nav_treatment">Behandeling</string>
    <string name="nav_post_treatment">Nabehandeling</string>
    <string name="nav_faq">Veel Gestelde Vragen</string>

    <string name="nav_videos">Filmpjes</string>
    <string name="nav_share">Delen</string>
    <string name="nav_about">About</string>

    <!--Other-->
    <string name="navigation_drawer_open">Open navigatie paneel</string>
    <string name="navigation_drawer_close">Sluit navigatie paneel</string>
    <string name="navtitle_other">Overig</string>
    <string name="action_settings">Instellingen</string>
    <string name="mobilisation">Mobilisatie</string>
    <string name="force">Kracht</string>

    <!--Tabs-->
    <string name="tab_illness_anatomy"><![CDATA[Anatomie & Functie]]></string>
    <string name="tab_illness_causes">Oorzaken</string>
    <string name="tab_illness_symptoms">Symptomen</string>
    <string name="tab_illness_diagnosis">Diagnose</string>

    <string name="tab_treatment_home">Algemeen</string>
    <string name="tab_treatment_conservative">Geen Operatie</string>
    <string name="tab_treatment_operation_patella">Operatie Patellapees</string>
    <string name="tab_treatment_operation_hamsting">Operatie Hamstring</string>

    <!--Body text-->
    <string name="illness_intro">
        Dit stuk text is de introductie van de aandoeningspagina. Hier komt een hoop text met plaatjes te staan.
    </string>

    <string name="faq_q1">Is het nodig een MRI scan te laten maken om de diagnose van een gescheurde voorste kruisband te stellen?</string>
    <string name="faq_a1">
        <![CDATA[
            <p align=\"justify\">Het verrichten van een MRI scan om de diagnose te bevestigen is lang niet altijd noodzakelijk. Een MRI scan is met name bedoeld om aanvullende letsels op te sporen, indien daar aanwijzingen voor zijn. Ook wordt een MRI scan gemaakt als de diagnose voorste kruisband ruptuur niet geheel zeker is, maar hiervoor wel aanwijzingen bestaan.</p>
        ]]>
    </string>
    <string name="faq_q2">Geneest een gescheurde voorste kruisband vanzelf?</string>
    <string name="faq_a2">
        <![CDATA[
            <p align=\"justify\">In tegenstelling tot bijvoorbeeld de binnenste knieband (het mediale collaterale ligament) geneest een volledig afgescheurde voorste kruisband niet vanzelf. Een operatie voor een gescheurde voorste kruisband bestaat daarom uit het vervangen van de voorste kruisband: een voorste kruisband reconstructie. Een incompleet gescheurde voorste kruisband kan wel (deels) herstellen. Soms geeft de rest van de incompleet gescheurde voorste kruisband nog voldoende stabiliteit.</p>
        ]]>
    </string>
    <string name="faq_q3">Moet er altijd een voorste kruisband reconstructie worden verricht bij een voorste kruisband ruptuur?</string>
    <string name="faq_a3">
        <![CDATA[
            <p align=\"justify\">Niet iedereen met een gescheurde voorste kruisband hoeft te worden geopereerd. Een deel van de pati&#235;nten zal door het verminderen van hun (sportieve) activiteiten niveau de belasting op de knie aanpassen aan de verminderde belastbaarheid van de knie. Echter dit betreft vaak de oudere pati&#235;nten met een lager (sportief) activiteiten niveau.</p>
        ]]>
    </string>
    <string name="faq_q4">Waarom wordt een voorste kruisband reconstructie verricht?</string>
    <string name="faq_a4">
        <![CDATA[
            <p align=\"justify\">Een voorste kruisband reconstructie wordt verricht om aanwezige klachten van instabiliteit op te heffen, en/of het optreden van aanvullend letsel van het kraakbeen of de meniscus in de toekomst (door nieuwe &#8220;verzwikkingen&#8221;) zoveel mogelijk te voorkomen.</p>
        ]]>
    </string>
    <string name="faq_q5">Wat is de beste timing van de operatie?</string>
    <string name="faq_a5">
        <![CDATA[
            <p align=\"justify\">De timing van een voorste kruisband reconstructie na een acuut letsel van de knie is van groot belang voor het eindresultaat. Voordat een voorste kruisband reconstructie kan worden verricht moet de knie eerst &#8220;afgekoeld&#8221; zijn: er dient een goede bewegingsvrijheid te zijn en de knie moet volledig kunnen strekken; daarnaast dient de zwelling van de knie nagenoeg helemaal verdwenen te zijn. De spierkracht van het bovenbeen dient goed te zijn hersteld. Over het algemeen duurt dit ongeveer vier tot zes weken vanaf het letsel. Indien de knie aan deze voorwaarden voldoet, dan wordt de operatie op korte termijn uitgevoerd. Indien de operatie te snel wordt uitgevoerd terwijl de knie nog niet aan deze voorwaarden voldoet, bestaat er een kans dat de knie stijf wordt en de revalidatie veel langer duurt. Daarnaast wordt het uiteindelijke eindresultaat hierdoor nadelig be&#207nvloedt.</p>
        ]]>
    </string>
    <string name="faq_q6">Wat is het beste transplantaat voor een voorste kruisband reconstructie?</string>
    <string name="faq_a6">
        <![CDATA[
            <p align=\"justify\">Op de vraag welk transplantaat en welke fixatie methode de beste keuze is bestaat geen eenduidig antwoord. Het hangt van vele technische- en omgevingsfactoren af. Ook de ervaring van de orthopedisch chirurg met bepaalde operatietechnieken, en het type revalidatie en de inzet bij de revalidatie, is van invloed op het eind resultaat. Hamstrings pezen versus de knieschijfpees Dit zijn de twee meest gebruikte type lichaamseigen pezen voor een voorste kruisband reconstructie. Beide opties hebben voor- en nadelen. In het eindresultaat zit geen verschil tussen beiden. Bij gebruikt van de knieschijfpees is de kans op pijnklachten rondom de knieschijf echter duidelijk groter dan bij gebruik van de hamstrings pezen.</p>
        ]]>
    </string>
    <string name="faq_q7">Bij wie moet ik revalideren?</string>
    <string name="faq_a7">
        <![CDATA[
            <p align=\"justify\">De revalidatie na een voorste kruisband reconstructie vindt plaats onder begeleiding van uw eigen fysiotherapeut. Wij adviseren u hiervoor gebruik te maken van een fysiotherapeut die gespecialiseerd is in de revalidatie na een voorste kruisband reconstructie. Maak voor de operatie alvast de afspraak.</p>
        ]]>
    </string>
    <string name="faq_q8">Heb ik na de operatie een brace nodig tijdens de revalidatie?</string>
    <string name="faq_a8">
        <![CDATA[
            <p align=\"justify\">Het is niet nodig een brace te dragen tijdens de revalidatie na een voorste kruisband reconstructie. Alleen bij bepaalde aanvullende letsels, of wanneer er naast de voorste kruisband reconstructie nog een andere operatieve behandeling is verricht kan een brace tijdens de revalidatie nodig zijn.</p>
        ]]>
    </string>
    <string name="faq_q9">Wanneer mag ik weer autorijden?</string>
    <string name="faq_a9">
        <![CDATA[
            <p align=\"justify\">Hiervoor bestaat geen duidelijke juridische richtlijn. Omdat u de eerste weken met twee krukken moet lopen, lijkt het voor de hand te liggen om op zijn vroegst pas nadien weer te gaan auto rijden. Indien u over een auto met een automatische versnellingsbak beschikt, en u aan de linker knie wordt geopereerd, zou u eerder auto kunnen rijden. Over het algemeen geldt voor het deelnemen aan het verkeer dat de verkeersdeelnemer daartoe goed in staat moet zijn.</p>
        ]]>
    </string>
    <string name="faq_q10">Wanneer kan ik weer aan het werk?</string>
    <string name="faq_a10">
        <![CDATA[
            <p align=\"justify\">Dat hangt af van uw beroep en uw werkzaamheden. Er wordt aanbevolen de eerste 3 maanden na de operatie geen zware fysieke activiteiten, met voor de knie belastend werk, en/of risicovolle activiteiten te verrichten.</p>
        ]]>
    </string>

    <!--HTML REFRENCES-->
    <string name="ref_assets">file:///android_asset/</string>
    <string name="ref_introduction">introduction_nl.html</string>
    <string name="ref_about">about_nl.html</string>
    <string name="ref_illness_symptoms">illness_symptoms_nl.html</string>
    <string name="ref_illness_anatomy">illness_anatomy_nl.html</string>
    <string name="ref_illness_diagnosis">illness_diagnosis_nl.html</string>
    <string name="ref_illness_causes">illness_causes_nl.html</string>
    <string name="ref_treatment_home">treatment_home_nl.html</string>
    <string name="ref_treatment_conservative">treatment_conservative_nl.html</string>
    <string name="ref_treatment_operation">treatment_operation_nl.html</string>
    <string name="ref_treatment_patella">treatment_patella_nl.html</string>
    <string name="ref_treatment_hamstring">treatment_hamstring_nl.html</string>
    <string name="ref_leg_extension">leg_extension_nl.html</string>
    <string name="ref_ankle_pumps">ankle_pumps_nl.html</string>
    <string name="ref_straight_leg_raise">straight_leg_raise_nl.html</string>
    <string name="ref_knee_extension">knee_extension_nl.html</string>
    <string name="ref_hip_abduction">hip_abduction_nl.html</string>

    <string name="treatment_intro">Behandeling tekst</string>
    <string name="post_treatment_intro">Nabehandeling tekst</string>
    <string name="faq_intro">Veel gestelde vragen tekst</string>

    <!--Youtube-->
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="API_KEY">AIzaSyD5HqGMVCERMXiJH6ujQPsuj9LyDn2tqrE</string>
    <string name="VIDEO_ID_legExtension">26rL68qsTQY</string>
    <string name="VIDEO_ID_anklePumps">6sc1Pfz69FQ</string>
    <string name="VIDEO_ID_straightLegRaise">sXKdCnHMf4c</string>
    <string name="VIDEO_ID_kneeExtension">VyzYQ3BfhhY</string>
    <string name="VIDEO_ID_hipAbduction">_VF5Qa9aYhA</string>

    <!--Ads-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_device_id">F669D25FC9FBADF2BEBF85061E7DDC9D</string>

</resources>