<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_illness"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_illness" />

        <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_treatment" />

        <item
            android:id="@+id/nav_post_treatment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_post_treatment" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_faq" />

        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/navtitle_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
